fixed bugs on kill lesson plan, delete screen buttons, increased padding on all lesson screens, fixed nav bar spacing

--- a/client/src/screens/DeleteLesson/DeleteLesson.css
+++ b/client/src/screens/DeleteLesson/DeleteLesson.css
@@ -6,18 +6,20 @@
   background-color: #ffad32;
   color: #000000;
   border-radius: 10px;
-  width: fit-content;
+  width: 150px;
   margin-right: 15px;
   font-weight: bold;
+  padding: 10px;
 }
 
 #del-btn {
   background-color: #ef3a3a;
   color: #000000;
   border-radius: 10px;
-  width: fit-content;
+  width: 150px;
   margin-left: 15px;
   font-weight: bold;
+  padding: 10px;
 }
 
 #delete-form-box {
